syntax = "proto3";

package frontend.checkout;

import "api-tools.proto";

option go_package = "/frontend/checkout";


service CheckoutService {
  rpc Checkout(CheckoutReq) returns (CheckoutResp) {
    option (api.post) = "checkout";
  }
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string zip_code = 5;
}

message CreditCardInfo {
  string credit_card_number = 1;
  int32 credit_card_cvv = 2;
  int32 credit_card_expiration_year = 3;
  int32 credit_card_expiration_month = 4;
}


message CheckoutReq {
  uint32 user_id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  Address address = 5;
  CreditCardInfo credit_card = 6;
}

message CheckoutResp {
  string order_id = 1;  // 订单号帮助用户去决定跳转到哪个订单页面
  string transaction_id = 2; // 交易号，用于查询交易状态
}
